Update readme and examples

--- a/examples/machine-aws.yaml
+++ b/examples/machine-aws.yaml
@@ -41,13 +41,14 @@ spec:
       diskType: "gp2"
       tags:
         "KubernetesCluster": "6qsm86c2d"
+    # Can be 'ubuntu', 'coreos' or 'centos'
     operatingSystem: "coreos"
     operatingSystemSpec:
       disableAutoUpdate: true
   roles:
   - "Node"
   versions:
-    kubelet: "v1.8.5"
+    kubelet: "v1.9.6"
     containerRuntime:
       # If you are using Ubuntu, you may choose 'cri-o' instead
       name: "docker"
