Add CentOS support (#138)
Resolved #137

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,8 +100,11 @@ jobs:
           name: Create kubeadm cluster and install machine-controller onto it
           command: ./test/tools/integration/provision_master.sh
       - run:
-          name: Test create and destroy machine
+          name: Test create and destroy ubuntu machine
           command: ./test/tools/integration/create-and-destroy-machine.sh
+      - run:
+          name: Test create and destroy centos machine
+          command: ./test/tools/integration/create-and-destroy-machine.sh centos
       - run:
           name: Clean up
           command: make -C test/tools/integration destroy
