Make cpu and memory configurable in vsphere

--- a/examples/machine-vsphere.yaml
+++ b/examples/machine-vsphere.yaml
@@ -35,6 +35,8 @@ spec:
       cluster: "test-cluster"
       datastore: datastore1
       allowInsecure: true
+      cpus: 2
+      MemoryMB: 2048
     operatingSystem: "ubuntu"
     operatingSystemSpec:
       distUpgradeOnBoot: false
