Fix verify tool multi params

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -97,6 +97,7 @@ rules:
   - machine-controller-digitalocean
   - machine-controller-openstack
   - machine-controller-aws
+  - machine-controller-vsphere
   verbs:
   - get
 - apiGroups:
