implements e2e tests for machine controller
at the moment we have test scenarios for DO and AWS.
tests can be run in two modes -short and normal.
when run in -short mode only a subset of tests will be tested.
by default e2e tests are disabled, we require special build tag to be provided.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,8 +94,8 @@ jobs:
           name: Test create and destroy ubuntu on vsphere
           command: ./test/tools/integration/create-and-destroy-machine.sh ubuntu vsphere
       - run:
-          name: Test create and destroy ubuntu machine
-          command: ./test/tools/integration/create-and-destroy-machine.sh
+          name:  Run E2E test
+          command: ./test/tools/integration/run_e2e_tests.sh
       - run:
           name: Test create and destroy centos machine
           command: ./test/tools/integration/create-and-destroy-machine.sh centos
