reads some fields of cloudProviderSpec from env variables.
the names of variables are hardcoded in the source code and cannot be changed.
there are other mechanisms through which the fields can be set, we only fallback
to reading from env variables when all fails.

--- a/examples/machine-digitalocean.yaml
+++ b/examples/machine-digitalocean.yaml
@@ -21,6 +21,7 @@ spec:
       - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "digitalocean"
     cloudProviderSpec:
+    # If empty, can be set via DO_TOKEN env var
       token:
         secretKeyRef:
           namespace: kube-system
