--- a/examples/machine-hetzner.yaml
+++ b/examples/machine-hetzner.yaml
@@ -21,6 +21,7 @@ spec:
       - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "hetzner"
     cloudProviderSpec:
+    # If empty, can be set via HZ_TOKEN env var
       token:
         secretKeyRef:
           namespace: kube-system
