--- a/examples/machine-openstack.yaml
+++ b/examples/machine-openstack.yaml
@@ -35,26 +35,31 @@ spec:
       - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "openstack"
     cloudProviderSpec:
+    # If empty, ca be set via OS_AUTH_URL env var
       identityEndpoint:
         secretKeyRef:
           namespace: kube-system
           name: machine-controller-openstack
           key: identityEndpoint
+    # If empty, ca be set via OS_USER_NAME env var
       username:
         secretKeyRef:
           namespace: kube-system
           name: machine-controller-openstack
           key: username
+    # If empty, ca be set via OS_PASSWORD env var
       password:
         secretKeyRef:
           namespace: kube-system
           name: machine-controller-openstack
           key: password
+    # If empty, ca be set via OS_DOMAIN_NAME env var
       domainName:
         secretKeyRef:
           namespace: kube-system
           name: machine-controller-openstack
           key: domainName
+    # If empty, ca be set via OS_TENANT_NAME env var
       tenantName:
         secretKeyRef:
           namespace: kube-system
