--- a/examples/machine-vsphere.yaml
+++ b/examples/machine-vsphere.yaml
@@ -12,7 +12,7 @@ stringData:
 apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
-  name: vsphere-machine
+  name: machine1
 spec:
   metadata:
     name: node1
