adds e2e test for hetzner (#171)
* adds e2e test for hetzner and vsphere

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,14 +91,9 @@ jobs:
           name: Create kubeadm cluster and install machine-controller onto it
           command: ./test/tools/integration/provision_master.sh
       - run:
-          name: Test create and destroy ubuntu on vsphere
-          command: ./test/tools/integration/create-and-destroy-machine.sh ubuntu vsphere
-      - run:
           name:  Run E2E test
           command: ./test/tools/integration/run_e2e_tests.sh
-      - run:
-          name: Test create and destroy centos machine
-          command: ./test/tools/integration/create-and-destroy-machine.sh centos
+          no_output_timeout: 15m
       - run:
           name: Clean up
           command: make -C test/tools/integration destroy
