--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,12 +69,16 @@ jobs:
             - /go/src/github.com/kubermatic/machine-controller/test/tools/verify/verify
   end-to-end:
     docker:
-      - image: alpine:latest
+      - image: golang:1.10.0-alpine
     working_directory: /go/src/github.com/kubermatic/machine-controller
     steps:
       - run:
           name: Install dependencies
-          command: apk update && apk add make bash git openssh-client jq rsync curl
+          command: >-
+              apk update && apk add make bash git openssh-client jq rsync curl &&
+              curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.10.0/bin/linux/amd64/kubectl &&
+              chmod +x kubectl &&
+              mv kubectl /usr/local/bin
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
       - restore_cache:
@@ -92,7 +96,7 @@ jobs:
           command: ./test/tools/integration/provision_master.sh
       - run:
           name:  Run E2E test
-          command: ./test/tools/integration/run_e2e_tests.sh
+          command: go test -tags=e2e -parallel 24 -v -timeout 60m  ./test/e2e/...
           no_output_timeout: 15m
       - run:
           name: Clean up
