--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   docker:
-    image: golang:1.10.1-alpine
+    - image: golang:1.10.1-alpine
   working_directory: /go/src/github.com/kubermatic/machine-controller
 
 version: 2
@@ -19,7 +19,7 @@ jobs:
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: go get -u github.com/golang/dep/cmd/dep
+      - run: apk update && apk add git && go get -u github.com/golang/dep/cmd/dep
       - run: dep status
 
   test:
@@ -34,14 +34,16 @@ jobs:
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: make machine-controller
+      - run: apk update && apk add make bash && make machine-controller
       - save_cache:
           key: machine-controller-{{ .Revision }}
           paths:
-            - machine-controller
+            - /go/src/github.com/kubermatic/machine-controller
   end-to-end:
     <<: *defaults
     steps:
+      - restore_cache:
+          key: machine-controller-{{ .Revision }}
       - run:
           name: Install dependencies
           command: >-
@@ -49,10 +51,6 @@ jobs:
               curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.10.0/bin/linux/amd64/kubectl &&
               chmod +x kubectl &&
               mv kubectl /usr/local/bin
-      - restore_cache:
-          key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - restore_cache:
-          key: machine-controller-{{ .Revision }}
       - run:
           name: Generate ssh keypair
           command: ssh-keygen -f $HOME/.ssh/id_rsa -P ''
@@ -64,7 +62,7 @@ jobs:
           command: ./test/tools/integration/provision_master.sh
       - run:
           name:  Run E2E test
-          command: go test -tags=e2e -parallel 24 -v -identifier $CIRCLE_BUILD_NUM -timeout 20m  ./test/e2e/...
+          command: go test -tags=e2e -parallel 24 -v -timeout 20m  ./test/e2e/... -identifier=$CIRCLE_BUILD_NUM
           no_output_timeout: 15m
       - run:
           name: Clean up
