--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,12 @@
+defaults: &defaults
+  docker:
+    - image: golang:1.10.1-alpine
+  working_directory: /go/src/github.com/kubermatic/machine-controller
+
 version: 2
 jobs:
   checkout_code:
-    docker:
-      - image: circleci/golang:1.9
-    working_directory: /go/src/github.com/kubermatic/machine-controller
+    <<: *defaults
     steps:
       - checkout
       - save_cache:
@@ -12,66 +15,35 @@ jobs:
             - /go/src/github.com/kubermatic/machine-controller
 
   check-dependencies:
-    docker:
-      - image: circleci/golang:1.9
-    working_directory: /go/src/github.com/kubermatic/machine-controller
+    <<: *defaults
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: go get -u github.com/golang/dep/cmd/dep
+      - run: apk update && apk add git && go get -u github.com/golang/dep/cmd/dep
       - run: dep status
 
   test:
-    docker:
-      - image: docker:stable
-    working_directory: /go/src/github.com/kubermatic/machine-controller
+    <<: *defaults
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - setup_remote_docker
-      - run: apk update && apk add make bash git
-      - run: |
-          set -e
-          docker create -v /go/src/github.com/kubermatic/machine-controller --name vol-container alpine /bin/true
-          docker cp . vol-container:/go/src/github.com/kubermatic/machine-controller/
-          export USE_VOLUME_CONTAINER=true && make test-unit-nodep
+      - run: go test ./...
 
   build:
-    docker:
-      - image: docker:stable
-    working_directory: /go/src/github.com/kubermatic/machine-controller
+    <<: *defaults
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - setup_remote_docker
-      - run: apk update && apk add make bash git
-      - run: |
-          set -e
-          docker create -v /go/src/github.com/kubermatic/machine-controller --name vol-container alpine /bin/true
-          docker cp . vol-container:/go/src/github.com/kubermatic/machine-controller/
-          export USE_VOLUME_CONTAINER=true && make machine-controller-nodep
-          docker cp vol-container:/go/src/github.com/kubermatic/machine-controller/machine-controller .
+      - run: apk update && apk add make bash && make machine-controller
       - save_cache:
           key: machine-controller-{{ .Revision }}
           paths:
-            - machine-controller
-  verify-tool:
-    docker:
-      - image: golang:1.10.0
-    working_directory: /go/src/github.com/kubermatic/machine-controller/test/tools/verify
+            - /go/src/github.com/kubermatic/machine-controller
+  end-to-end:
+    <<: *defaults
     steps:
       - restore_cache:
-          key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: make verify
-      - save_cache:
-          key: verify-tool-{{ .Revision }}
-          paths:
-            - /go/src/github.com/kubermatic/machine-controller/test/tools/verify/verify
-  end-to-end:
-    docker:
-      - image: golang:1.10.0-alpine
-    working_directory: /go/src/github.com/kubermatic/machine-controller
-    steps:
+          key: machine-controller-{{ .Revision }}
       - run:
           name: Install dependencies
           command: >-
@@ -79,12 +51,6 @@ jobs:
               curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.10.0/bin/linux/amd64/kubectl &&
               chmod +x kubectl &&
               mv kubectl /usr/local/bin
-      - restore_cache:
-          key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - restore_cache:
-          key: machine-controller-{{ .Revision }}
-      - restore_cache:
-          key: verify-tool-{{ .Revision }}
       - run:
           name: Generate ssh keypair
           command: ssh-keygen -f $HOME/.ssh/id_rsa -P ''
@@ -96,17 +62,21 @@ jobs:
           command: ./test/tools/integration/provision_master.sh
       - run:
           name:  Run E2E test
-          command: go test -tags=e2e -parallel 24 -v -timeout 60m  ./test/e2e/...
+          command: go test -tags=e2e -parallel 24 -v -timeout 20m  ./test/e2e/... -identifier=$CIRCLE_BUILD_NUM
           no_output_timeout: 15m
       - run:
-          name: Clean up
+          name: Clean up machines
+          command: ./test/tools/integration/cleanup_machines.sh
+          when: always
+      - run:
+          name: Clean up master
           command: make -C test/tools/integration destroy
           when: always
 
   publish:
+    <<: *defaults
     docker:
       - image: docker:stable
-    working_directory: /go/src/github.com/kubermatic/machine-controller
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
@@ -146,18 +116,11 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - verify-tool:
-          requires:
-            - checkout_code
-          filters:
-            tags:
-              only: /v.*/
       - end-to-end:
           requires:
             - check-dependencies
             - test
             - build
-            - verify-tool
           filters:
             tags:
               only: /v.*/
