use bigger machine on digitalocean for e2e tests

--- a/test/e2e/provisioning/testdata/machine-digitalocean.yaml
+++ b/test/e2e/provisioning/testdata/machine-digitalocean.yaml
@@ -12,7 +12,7 @@ spec:
     cloudProviderSpec:
       token: << DIGITALOCEAN_TOKEN >>
       region: fra1
-      size: 1gb
+      size: c-2
       backups: false
       ipv6: false
       private_networking: true
