Publish events for machines (#190)

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -152,6 +152,13 @@ rules:
   - get
   - watch
   - list
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
