--- a/examples/machine-openstack.yaml
+++ b/examples/machine-openstack.yaml
@@ -82,6 +82,9 @@ spec:
       network: ""
       # Only required if the network has more than one subnet
       subnet: ""
+      # the list of tags you would like to attach to the instance
+      tags:
+        tagKey: tagValue
     # Can be 'ubuntu', 'coreos' or 'centos'
     operatingSystem: "ubuntu"
     operatingSystemSpec:
