Enable e2e tests vor containerlinux on vsphere

--- a/test/e2e/provisioning/testdata/machine-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machine-vsphere.yaml
@@ -12,7 +12,7 @@ spec:
       - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "vsphere"
     cloudProviderSpec:
-      templateVMName: ubuntu-template
+      templateVMName: '<< OS_NAME >>-template'
       username: '<< VSPHERE_USERNAME >>'
       vsphereURL: 'https://<< VSPHERE_ADDRESS >>'
       datacenter: 'Datacenter'
