Inject ssh key into e2e test

--- a/test/e2e/provisioning/testdata/machine-aws.yaml
+++ b/test/e2e/provisioning/testdata/machine-aws.yaml
@@ -6,6 +6,8 @@ spec:
   metadata:
     name: << NODE_NAME >>
   providerConfig:
+    sshPublicKeys:
+      - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "aws"
     cloudProviderSpec:
       accessKeyId: << AWS_ACCESS_KEY_ID >>
