Use nyc3 for do e2e testing

--- a/test/e2e/provisioning/testdata/machine-digitalocean.yaml
+++ b/test/e2e/provisioning/testdata/machine-digitalocean.yaml
@@ -11,7 +11,7 @@ spec:
     cloudProvider: "digitalocean"
     cloudProviderSpec:
       token: << DIGITALOCEAN_TOKEN >>
-      region: fra1
+      region: nyc3
       size: c-2
       backups: false
       ipv6: false
