make vsphere cluster configurable in e2e tests

--- a/test/e2e/provisioning/testdata/machine-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machine-vsphere.yaml
@@ -18,7 +18,7 @@ spec:
       datacenter: 'Datacenter'
       folder: '/Datacenter/vm/e2e-tests'
       password: << VSPHERE_PASSWORD >>
-      cluster: "test-cluster"
+      cluster: '<< VSPHERE_CLUSTER >>'
       datastore: datastore1
       allowInsecure: true
       cpus: 2
