move protocol to env-var

--- a/examples/machine-vsphere.yaml
+++ b/examples/machine-vsphere.yaml
@@ -25,7 +25,7 @@ spec:
     cloudProviderSpec:
       templateVMName: ubuntu-template
       username: '<< VSPHERE_USERNAME >>'
-      vsphereURL: 'https://<< VSPHERE_ADDRESS >>'
+      vsphereURL: '<< VSPHERE_ADDRESS >>'
       datacenter: 'Datacenter'
       password:
         secretKeyRef:
