--- a/test/e2e/provisioning/testdata/machine-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machine-vsphere.yaml
@@ -18,6 +18,7 @@ spec:
       datacenter: 'Datacenter'
       folder: '/Datacenter/vm/e2e-tests'
       password: << VSPHERE_PASSWORD >>
+      # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
       cluster: '<< VSPHERE_CLUSTER >>'
       datastore: datastore1
       allowInsecure: true
