Make vsphere cluster configurable (#222)
* make vsphere cluster configurable in e2e tests

* fix e2e test readme

* move protocol to env-var

* fix deprecated go env var

* add example for vsphereURL

--- a/examples/machine-vsphere.yaml
+++ b/examples/machine-vsphere.yaml
@@ -25,7 +25,8 @@ spec:
     cloudProviderSpec:
       templateVMName: ubuntu-template
       username: '<< VSPHERE_USERNAME >>'
-      vsphereURL: 'https://<< VSPHERE_ADDRESS >>'
+      # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
+      vsphereURL: '<< VSPHERE_ADDRESS >>'
       datacenter: 'Datacenter'
       password:
         secretKeyRef:
