--- a/test/e2e/provisioning/testdata/machine-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machine-vsphere.yaml
@@ -14,11 +14,12 @@ spec:
     cloudProviderSpec:
       templateVMName: '<< OS_NAME >>-template'
       username: '<< VSPHERE_USERNAME >>'
-      vsphereURL: 'https://<< VSPHERE_ADDRESS >>'
+      vsphereURL: '<< VSPHERE_ADDRESS >>'
       datacenter: 'Datacenter'
       folder: '/Datacenter/vm/e2e-tests'
       password: << VSPHERE_PASSWORD >>
-      cluster: "test-cluster"
+      # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
+      cluster: '<< VSPHERE_CLUSTER >>'
       datastore: datastore1
       allowInsecure: true
       cpus: 2
