--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -83,10 +83,18 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - secrets
   - events
   verbs:
   - create
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - create
+  - update
+  - list
+  - watch
 - apiGroups:
   - ""
   resources:
