--- a/test/e2e/provisioning/testdata/machine-azure.yaml
+++ b/test/e2e/provisioning/testdata/machine-azure.yaml
@@ -20,7 +20,7 @@ spec:
       vmSize: "Standard_B1ms"
       vnetName: "e2e-test-vnet"
       subnetName: "e2e-test-subnet"
-    operatingSystem: "coreos"
+    operatingSystem: "<< OS_NAME >>"
     operatingSystemSpec:
       distUpgradeOnBoot: false
   roles:
