--- a/pkg/machines/migrate/testdata/downstreammachines/machine-aws.yaml
+++ b/pkg/machines/migrate/testdata/downstreammachines/machine-aws.yaml
@@ -1,7 +1,7 @@
 apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
-  name: machine1
+  name: machine-aws
 spec:
   metadata:
     name: node1
