--- a/pkg/machines/migrate/testdata/migrated/machine-digitalocean.yaml
+++ b/pkg/machines/migrate/testdata/migrated/machine-digitalocean.yaml
@@ -1,6 +1,4 @@
 metadata:
-  annotations:
-    machine-controller.kubermatic.io/container-runtime-info: '{"name":"docker","version":"1.13"}'
   creationTimestamp: null
   name: machine-digitalocean
 spec:
@@ -23,6 +21,9 @@ spec:
         token: token
       operatingSystem: coreos
       operatingSystemSpec:
+        containerRuntimeInfo:
+          name: docker
+          version: "1.13"
         disableAutoUpdate: true
       sshPublicKeys:
       - << YOUR_PUBLIC_KEY >>
