--- a/pkg/machines/migrate/testdata/migrated/machine-openstack.yaml
+++ b/pkg/machines/migrate/testdata/migrated/machine-openstack.yaml
@@ -1,6 +1,4 @@
 metadata:
-  annotations:
-    machine-controller.kubermatic.io/container-runtime-info: '{"name":"docker","version":"1.13"}'
   creationTimestamp: null
   name: machine-openstack
 spec:
@@ -31,6 +29,9 @@ spec:
         username: username
       operatingSystem: ubuntu
       operatingSystemSpec:
+        containerRuntimeInfo:
+          name: docker
+          version: "1.13"
         distUpgradeOnBoot: true
       sshPublicKeys:
       - << YOUR_PUBLIC_KEY >>
