--- a/pkg/machines/migrate/testdata/migrated/machine-vsphere.yaml
+++ b/pkg/machines/migrate/testdata/migrated/machine-vsphere.yaml
@@ -1,6 +1,4 @@
 metadata:
-  annotations:
-    machine-controller.kubermatic.io/container-runtime-info: '{"name":"docker","version":"1.13"}'
   creationTimestamp: null
   name: machine-vsphere
 spec:
@@ -26,6 +24,9 @@ spec:
         vsphereURL: << VSPHERE_ADDRESS >>
       operatingSystem: ubuntu
       operatingSystemSpec:
+        containerRuntimeInfo:
+          name: docker
+          version: "1.13"
         distUpgradeOnBoot: false
       sshPublicKeys:
       - << YOUR_PUBLIC_KEY >>
