Set machine namespace

--- a/pkg/api/conversions/testdata/migrated/machine-hetzner.yaml
+++ b/pkg/api/conversions/testdata/migrated/machine-hetzner.yaml
@@ -1,6 +1,7 @@
 metadata:
   creationTimestamp: null
   name: machine-hetzner
+  namespace: kube-system
 spec:
   metadata:
     creationTimestamp: null
