--- a/pkg/api/conversions/testdata/migrated/machine-vsphere.yaml
+++ b/pkg/api/conversions/testdata/migrated/machine-vsphere.yaml
@@ -1,6 +1,7 @@
 metadata:
   creationTimestamp: null
   name: machine-vsphere
+  namespace: kube-system
 spec:
   metadata:
     creationTimestamp: null
