--- a/pkg/api/conversions/testdata/migrated/machine-digitalocean.yaml
+++ b/pkg/api/conversions/testdata/migrated/machine-digitalocean.yaml
@@ -1,6 +1,7 @@
 metadata:
   creationTimestamp: null
   name: machine-digitalocean
+  namespace: kube-system
 spec:
   metadata:
     creationTimestamp: null
