--- a/pkg/api/conversions/testdata/migrated/machine-aws.yaml
+++ b/pkg/api/conversions/testdata/migrated/machine-aws.yaml
@@ -1,5 +1,7 @@
 metadata:
   creationTimestamp: null
+  finalizers:
+  - machine-delete-finalizer
   name: machine-aws
   namespace: kube-system
 spec:
