Remove migrator building form circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: apk update && apk add make bash && make machine-controller && make migrator
+      - run: apk update && apk add make bash && make machine-controller
       - save_cache:
           key: machine-controller-{{ .Revision }}
           paths:
@@ -94,7 +94,6 @@ jobs:
           export GIT_TAG=$CIRCLE_TAG
           docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}"
           make docker-image
-          make docker-image-migrator
 
 workflows:
   version: 2
