Add kubernetes version as parameter to e2e tests

--- a/test/e2e/provisioning/testdata/machine-azure.yaml
+++ b/test/e2e/provisioning/testdata/machine-azure.yaml
@@ -27,7 +27,7 @@ spec:
   roles:
   - "Node"
   versions:
-    kubelet: "v1.10.2"
+    kubelet: "<< KUBERNETES_VERSION >>"
     containerRuntime:
       # If you are using Ubuntu, you may choose 'cri-o' instead
       name: "<< CONTAINER_RUNTIME >>"
