--- a/test/e2e/provisioning/testdata/machine-openstack.yaml
+++ b/test/e2e/provisioning/testdata/machine-openstack.yaml
@@ -23,7 +23,7 @@ spec:
   roles:
   - "Node"
   versions:
-    kubelet: "v1.9.6"
+    kubelet: "<< KUBERNETES_VERSION >>"
     containerRuntime:
       # If you are using Ubuntu, you may choose 'cri-o' instead
       name: "<< CONTAINER_RUNTIME >>"
