Add Kubernetes 1.11 support (#256)
* Extend e2e tests to test against all supported Kubernetes versions on all providers
* Use the hyperkube image from `k8s.gcr.io` as the quay.io repo doesn't seem to be maintained

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   docker:
-    - image: golang:1.10.1-alpine
+    - image: golang:1.10.3
   working_directory: /go/src/github.com/kubermatic/machine-controller
 
 version: 2
@@ -19,7 +19,7 @@ jobs:
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: apk update && apk add git && go get -u github.com/golang/dep/cmd/dep
+      - run: go get -u github.com/golang/dep/cmd/dep
       - run: dep status
 
   test:
@@ -27,14 +27,14 @@ jobs:
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: go test ./...
+      - run: go test -race ./...
 
   build:
     <<: *defaults
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
-      - run: apk update && apk add make bash && make machine-controller
+      - run: make machine-controller
       - save_cache:
           key: machine-controller-{{ .Revision }}
           paths:
@@ -47,7 +47,7 @@ jobs:
       - run:
           name: Install dependencies
           command: >-
-              apk update && apk add make bash git openssh-client jq rsync curl &&
+              apt update && apt install -y jq rsync unzip &&
               curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.10.0/bin/linux/amd64/kubectl &&
               chmod +x kubectl &&
               mv kubectl /usr/local/bin
@@ -64,7 +64,7 @@ jobs:
           name:  Run E2E test
           command: >-
               export KUBECONFIG=$GOPATH/src/github.com/kubermatic/machine-controller/.kubeconfig &&
-              go test -tags=e2e -parallel 24 -v -timeout 20m  ./test/e2e/... -identifier=$CIRCLE_BUILD_NUM ||
+              go test -race -tags=e2e -parallel 240 -v -timeout 30m  ./test/e2e/... -identifier=$CIRCLE_BUILD_NUM ||
               (kubectl logs -n kube-system $(kubectl get pods -n kube-system|egrep '^machine-controller'|
               awk '{print $1}'); exit 1)
           no_output_timeout: 25m
@@ -87,7 +87,6 @@ jobs:
       - restore_cache:
           key: machine-controller-{{ .Revision }}
       - setup_remote_docker
-      - run: apk update && apk add make bash git
       - run: |
           set -e
           export GIT_TAG=$CIRCLE_TAG
