--- a/test/e2e/provisioning/testdata/machine-azure.yaml
+++ b/test/e2e/provisioning/testdata/machine-azure.yaml
@@ -27,9 +27,7 @@ spec:
   roles:
   - "Node"
   versions:
-    kubelet: "v1.10.2"
+    kubelet: "<< KUBERNETES_VERSION >>"
     containerRuntime:
       # If you are using Ubuntu, you may choose 'cri-o' instead
       name: "<< CONTAINER_RUNTIME >>"
-      # Only has an effect on Ubuntu, check pkg/userdata/ubuntu/docker.go for available versions
-      version: "<< CONTAINER_RUNTIME_VERSION >>"
