make provisioning more resilient

--- a/examples/machine-hetzner.yaml
+++ b/examples/machine-hetzner.yaml
@@ -40,4 +40,4 @@ spec:
     kubelet: "1.9.6"
     # Must be 'docker' if you don't use Ubuntu
     containerRuntime:
-      name: "cri-o"
+      name: "docker"
