--- a/test/e2e/provisioning/testdata/machine-openstack.yaml
+++ b/test/e2e/provisioning/testdata/machine-openstack.yaml
@@ -19,11 +19,12 @@ spec:
       image: "<< OS_NAME >>"
       flavor: "m1.small"
       floatingIpPool: ""
+      domainName: "<< DOMAIN_NAME >>"
+      region: "<< REGION >>"
     operatingSystem: "<< OS_NAME >>"
   roles:
   - "Node"
   versions:
     kubelet: "<< KUBERNETES_VERSION >>"
     containerRuntime:
-      # If you are using Ubuntu, you may choose 'cri-o' instead
       name: "<< CONTAINER_RUNTIME >>"
