--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -84,6 +84,7 @@ spec:
             - /usr/local/bin/machine-controller
             - -logtostderr
             - -v=6
+            - -worker-count=5
             - -cluster-dns=10.10.10.10
             - -internal-listen-address=0.0.0.0:8085
           ports:
