Allow configuring vsphere connection settings via env vars

--- a/examples/machine-vsphere.yaml
+++ b/examples/machine-vsphere.yaml
@@ -24,10 +24,13 @@ spec:
     cloudProvider: "vsphere"
     cloudProviderSpec:
       templateVMName: ubuntu-template
+      # Can also be set via the env var 'VSPHERE_USERNAME' on the machine-controller
       username: '<< VSPHERE_USERNAME >>'
+      # Can also be set via the env var 'VSPHERE_ADDRESS' on the machine-controller
       # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
       vsphereURL: '<< VSPHERE_ADDRESS >>'
       datacenter: 'Datacenter'
+      # Can also be set via the env var 'VSPHERE_PASSWORD' on the machine-controller
       password:
         secretKeyRef:
           namespace: kube-system
@@ -35,6 +38,7 @@ spec:
           key: password
       cluster: "test-cluster"
       datastore: datastore1
+      # Can also be set via the env var 'VSPHERE_ALLOW_INSECURE' on the machine-controller
       allowInsecure: true
       cpus: 2
       MemoryMB: 2048
