fix build step dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,11 @@ jobs:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
       - run: DEP_RELEASE_TAG=v0.4.1 curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-      - run: dep status
+      - run: make vendor
+      - save_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - /go/src/github.com/kubermatic/machine-controller
 
   test:
     <<: *defaults
@@ -34,6 +38,7 @@ jobs:
     steps:
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - run: DEP_RELEASE_TAG=v0.4.1 curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
       - run: make machine-controller
       - save_cache:
           key: machine-controller-{{ .Revision }}
@@ -110,13 +115,13 @@ workflows:
               only: /v.*/
       - test:
           requires:
-            - checkout_code
+            - check-dependencies
           filters:
             tags:
               only: /v.*/
       - build:
           requires:
-            - checkout_code
+            - check-dependencies
           filters:
             tags:
               only: /v.*/
