--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -35,6 +35,10 @@ required = [
   branch = "release-1.10"
 
 [[constraint]]
+  name = "k8s.io/api"
+  branch = "release-1.10"
+
+[[constraint]]
   name = "k8s.io/client-go"
   branch = "release-7.0"
 
