--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,15 @@ jobs:
       - run: export DEP_RELEASE_TAG=v0.5.0; curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
       - run: dep status
 
+  lint:
+    <<: *defaults
+    docker:
+      - image: quay.io/kubermatic/gometalinter:latest
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - run: gometalinter --config gometalinter.json ./...
+
   test:
     <<: *defaults
     steps:
@@ -105,6 +114,12 @@ workflows:
             tags:
               only: /v.*/
       - check-dependencies:
+          requires:
+            - checkout_code
+          filters:
+            tags:
+              only: /v.*/
+      - lint:
           requires:
             - checkout_code
           filters:
